feat: add code of activity 2 of Renan
https://gitlab.com/renanfernandofranco/mc859.git
commit: 69aa20064a24e5cab7678e96ad299c09d7611119

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ __pycache__/
 # vscode
 .vscode/
 
+# c++
+*.o
+activity_3/KTSP/KTSP
+activity_3/tests
+
 
 # latex
 # thanks to everyone who wrote:
