feat(activity_3): update project to use cmake

--- a/activity_3/CMakeLists.txt
+++ b/activity_3/CMakeLists.txt
@@ -1,10 +1,38 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(concorde_tsp_cpp)
-include_directories(include)
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    /opt/gurobi951/linux64/include
+)
 
-add_executable(concorde_example concorde_example.cpp)
+link_directories(
+    /opt/gurobi951/linux64/lib
+)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall -Werror -Wextra -Wpedantic -pedantic-errors -fmax-errors=1")
+
+add_executable(
+    concorde_example
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/concorde_example.cpp
+)
+
 target_link_libraries(
   concorde_example
   ${CMAKE_CURRENT_SOURCE_DIR}/lib/concorde.a
   ${CMAKE_CURRENT_SOURCE_DIR}/lib/qsopt.a
+)
+
+add_executable(
+    ktsp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/ktsp.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/subTourElim.cpp
+)
+
+target_link_libraries(
+    ktsp
+    m
+    gurobi_c++
+    gurobi95
 )
