build(activity_3): improve CMakeLists.txt

--- a/activity_3/CMakeLists.txt
+++ b/activity_3/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(concorde_tsp_cpp)
+
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Werror -Wextra -Wpedantic -pedantic-errors -fmax-errors=1")
+
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     /opt/gurobi951/linux64/include
@@ -8,10 +14,6 @@ include_directories(
 link_directories(
     /opt/gurobi951/linux64/lib
 )
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall -Werror -Wextra -Wpedantic -pedantic-errors -fmax-errors=1")
 
 add_executable(
     concorde_example
