--- a/activity_3/CMakeLists.txt
+++ b/activity_3/CMakeLists.txt
@@ -4,7 +4,7 @@ project(concorde_tsp_cpp)
 set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Werror -Wextra -Wpedantic -pedantic-errors -fmax-errors=1")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wpedantic -pedantic-errors -fmax-errors=1")
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/include
