feat: use multiple tenures and update results

--- a/src/maxQbf_c++/Makefile
+++ b/src/maxQbf_c++/Makefile
@@ -8,7 +8,7 @@ ARQ_MAIN = $(shell pwd | rev | cut -d '/' -f 1 | rev)
 
 OBJECTS = $(patsubst %.cpp, %.o, $(wildcard *.cpp))
 
-CPPFLAGS?=-g -O3 -Wall -Wextra -lm --std=c++17
+CPPFLAGS?=-g -O3 -DNDEBUG -Wall -Wextra -lm --std=c++17
 GUROBIFLAGS?=-I/opt/gurobi951/linux64/include -L/opt/gurobi951/linux64/lib -lgurobi_c++ -lgurobi95
 
 build: $(OBJECTS)
