add tests output

--- a/activity6/src/maxQbf_c++/Makefile
+++ b/activity6/src/maxQbf_c++/Makefile
@@ -20,5 +20,5 @@ softClean:
 	rm $(ARQ_MAIN); rm -f *.o;
 
 hardClean:
-	rm $(ARQ_MAIN); rm -f *.o; rm -r out; rm output.png; rm gmon.out; rm *.out;
+	rm $(ARQ_MAIN); rm -f *.o; rm -r output; rm output.png; rm gmon.out; rm *.out;
 	
